1. 돌발 영상 및 스냅 사진 팝업 작업 2. 대시보드 현황(교차로/횡단보도) 작업 3. 신호정보관리(목록, 상세, 추가, 수정) 화면 및 팝업 작업 4. 교차로 유출입 교통량 화면: 진입방향 기준으로 클래스명 변경.

--- a/base/css/is.css
+++ b/base/css/is.css
@@ -572,6 +572,21 @@
 .crossroads-flow-board .flow-stats-detail.reverse {
   border-bottom: 0;
 }
+.crossroads-flow-board .flow-stats-detail.reverse .arrow .flow-straight.strt::before {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.crossroads-flow-board .flow-stats-detail.reverse .arrow .flow-straight.in::before {
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+.crossroads-flow-board .flow-stats-detail.reverse .arrow .flow-straight.out::before {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
 .crossroads-flow-board .flow-stats-detail.reverse .arrow .flow-turn.left::before {
   -webkit-transform: rotate(180deg);
       -ms-transform: rotate(180deg);
@@ -656,7 +671,7 @@
   background-position: 0 0;
   background-size: contain;
 }
-.crossroads-flow-board .flow-stats-detail .arrow button.flow-straight.up::before {
+.crossroads-flow-board .flow-stats-detail .arrow button.flow-straight.in::before {
   -webkit-transform: rotate(180deg);
       -ms-transform: rotate(180deg);
           transform: rotate(180deg);
